Requests management adjustment
